[package]
name = "rust_stager"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bytes = "1.4.0"
cbc = "0.1.2"
reqwest = { version = "0.11.18", features = ["blocking", "native-tls"]}

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.9", features = ["memoryapi", "processthreadsapi", "synchapi","errhandlingapi"]}

[target.'cfg(macos)'.dependencies]
memmap2 = "0.7.1"

