[package]
name = "rust_stager"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 'z'
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
obfstr = "0.4.3"
region = "3.0.0"
aes = "0.8.3"
cbc = "0.1.2"
reqwest = { version = "0.12.8", features = ["blocking", "native-tls"]}
named-lock = "0.4.1"
libloading = "0.8"
